--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
   },
   "homepage": "https://github.com/yznki/avara-api#readme",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.70",
+    "cloudinary": "^2.6.1",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-oauth2-jwt-bearer": "^1.6.1",
     "mongoose": "^8.14.2",
+    "multer": "1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
+    "streamifier": "^0.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
